# bluetooth_pair

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
msg/: BluetoothDevice.msg  BluetoothDevices.msg
src/bluetooth_pair/: __init__.py  bluetooth_pair.py
srv/: PairDevice.srv  SearchDevices.srv
